--- a/style.css
+++ b/style.css
@@ -1,5 +1,30 @@
 #keyboard {
-    display: block;
-    border: 3px solid blueviolet;
-    padding: 5px;
+  display: block;
+  border: 2px solid black;
+  padding: 5px;
 }
+
+#keyboard::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.buttons {
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+  margin: 3px;
+  padding: 3px;
+  float: left;
+}
+
+.clearfix {
+  display: block;
+  width: 100%;
+  clear: both;
+}
+
+.active {
+  background: red;
+}/*# sourceMappingURL=style.css.map */
