--- a/style.css
+++ b/style.css
@@ -1,7 +1,21 @@
+.container {
+  width: 100%;
+}
+
+.main__textarea {
+  width: 100%;
+  height: 300px;
+  display: block;
+  margin: 0 auto;
+}
+
 #keyboard {
   display: block;
   border: 2px solid black;
   padding: 5px;
+  justify-content: center;
+  width: 900px;
+  margin-top: 100px;
 }
 
 #keyboard::after {
