--- a/style.css
+++ b/style.css
@@ -11,11 +11,11 @@
 
 #keyboard {
   display: block;
-  border: 2px solid black;
+  border: 2px solid rgba(224, 168, 228, 0.678);
   padding: 5px;
   justify-content: center;
   width: 900px;
-  margin-top: 100px;
+  margin-top: 70px;
 }
 
 #keyboard::after {
@@ -27,10 +27,19 @@
 .buttons {
   width: 50px;
   height: 50px;
-  border: 1px solid black;
+  border: none;
   margin: 3px;
   padding: 3px;
   float: left;
+  background-color: #e9cbde;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  transition: all 0.2s ease;
+}
+
+.buttons:hover {
+  background-color: #e79ae7;
+  box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.3);
 }
 
 .clearfix {
@@ -40,5 +49,7 @@
 }
 
 .active {
-  background: red;
+  transform: translateY(2px);
+  box-shadow: inset 0px 5px 5px rgba(0, 0, 0, 0.3);
+  background-color: #e79ae7;
 }/*# sourceMappingURL=style.css.map */
